<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoDisconnect</string>
    <string name="traffic_switch_label">mobile data traffic</string>
    <string name="action_settings">Settings</string>
    <string name="schedule_at_button_text">schedule at</string>
    <string name="schedule_in_button_text">schedule in</string>
    <string name="unschedule_button_text">unschedule</string>
   	<string name="timepicker_button_text">&#8230;</string>
	<string name="datepicker_button_text">&#8230;</string>
	<string name="time_text">00:00</string>
	<string name="date_text">26.10.2014</string>
	<string name="days_label">days:</string>
	<string name="days_text">1</string>
	<string name="hours_label">hours:</string>
	<string name="hours_text">0</string>
	<string name="minutes_label">mins:</string>
	<string name="minutes_text">0</string>
	<string name="status_text">no disconnect scheduled</string>
	<string name="status_nothing_scheduled">no disconnect scheduled</string>
	<string name="status_scheduled_at">disconnect scheduled at</string>
	<string name="saved_schedule_state">saved_schedule_state</string>
	<string name="saved_schedule_time">saved_schedule_time</string>
	<string name="saved_edit_time">saved_saved_time</string>
	<string name="saved_days">saved_days</string>
	<string name="saved_hours">saved_hours</string>
	<string name="saved_minutes">saved_minutes</string>
</resources>
